[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pod-harness"
version = "0.1.0"
description = "E2E test harness for Kubernetes infrastructure."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "kubernetes>=30.1.0,<31.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end tests against a live Kubernetes cluster",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kubeharness"]
